@@ -11,6 +11,8 @@ module.exports = function (ws, agent, { version, enabled }) {
     return ws
   }
 
+  const ins = agent._instrumentation
+
   agent.logger.debug('shimming ws.prototype.send function')
   shimmer.wrap(ws.prototype, 'send', wrapSend)
 
@@ -18,28 +20,29 @@ module.exports = function (ws, agent, { version, enabled }) {
 
   function wrapSend (orig) {
     return function wrappedSend () {
-      var span = agent.startSpan('Send WebSocket Message', 'websocket', 'send')
-      var id = span && span.transaction.id
+      agent.logger.debug('intercepted call to ws.prototype.send')
+      const span = ins.createSpan('Send WebSocket Message', 'websocket', 'send')
+      if (!span) {
+        return orig.apply(this, arguments)
+      }
 
-      agent.logger.debug('intercepted call to ws.prototype.send %o', { id: id })
-
-      if (!span) return orig.apply(this, arguments)
-
-      var args = [].slice.call(arguments)
-      var cb = args[args.length - 1]
+      const args = Array.prototype.slice.call(arguments)
+      let cb = args[args.length - 1]
+      const onDone = function () {
+        span.end()
+        if (cb) {
+          cb.apply(this, arguments)
+        }
+      }
       if (typeof cb === 'function') {
-        args[args.length - 1] = done
+        args[args.length - 1] = ins.bindFunction(onDone)
       } else {
         cb = null
-        args.push(done)
+        args.push(ins.bindFunction(onDone))
       }
 
-      return orig.apply(this, args)
-
-      function done () {
-        span.end()
-        if (cb) cb.apply(this, arguments)
-      }
+      const spanRunContext = ins.currRunContext().enterSpan(span)
+      return ins.withRunContext(spanRunContext, orig, this, ...args)
     }
   }
 }
